--- a/app/src/main/res/layout/alertdialog_mine.xml
+++ b/app/src/main/res/layout/alertdialog_mine.xml
@@ -8,24 +8,28 @@
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/anim_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:layout_weight="6"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:id="@+id/anim_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:paddingLeft="40dp"-->
+        <!--android:paddingRight="40dp"-->
+        <!--android:layout_weight="6"-->
+        <!--android:orientation="vertical">-->
 
-        <ImageView
-            android:id="@+id/iv_ad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:scaleType="center"
-            android:src="@mipmap/ic_adc" />
-    </LinearLayout>
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_ad"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:scaleType="center"-->
+            <!--android:src="@mipmap/ic_adc" />-->
+    <!--</LinearLayout>-->
+    <FrameLayout
+        android:id="@+id/fl_content_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
