--- a/app/src/main/res/layout/alertdialog_mine.xml
+++ b/app/src/main/res/layout/alertdialog_mine.xml
@@ -5,31 +5,33 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:gravity="center"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/anim_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:paddingLeft="40dp"-->
-        <!--android:paddingRight="40dp"-->
-        <!--android:layout_weight="6"-->
-        <!--android:orientation="vertical">-->
+    <LinearLayout
+        android:id="@+id/anim_container"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:layout_gravity="center"
+        android:layout_weight="6"
+        android:background="@drawable/border"
+        android:padding="10dp"
+        android:orientation="vertical">
 
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_ad"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:scaleType="center"-->
-            <!--android:src="@mipmap/ic_adc" />-->
-    <!--</LinearLayout>-->
-    <FrameLayout
-        android:id="@+id/fl_content_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/iv_ad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="center"
+            android:src="@mipmap/ic_adc" />
+    </LinearLayout>
+    <!--<FrameLayout-->
+        <!--android:id="@+id/fl_content_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,6 +39,7 @@
         android:paddingRight="40dp"
         android:layout_gravity="center"
         android:layout_weight="1"
+
         android:orientation="vertical">
         <ImageView
             android:id="@+id/iv_close"
