--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,12 @@
     <!--弹出对话框-->
     <style name="LocatonDialogStyle" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item><!-- 背景透明 -->
-        <item name="android:windowAnimationStyle">@android:style/Theme.InputMethod</item>
+        <!--<item name="android:windowAnimationStyle">@android:style/Theme.InputMethod</item>-->
+        <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
+    </style>
+    <!-- 自定义Dialog动画 -->
+    <style name="BottomDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/input_method_enter</item>
+        <item name="android:windowExitAnimation">@anim/input_method_exit</item>
     </style>
 </resources>
