测试：1.减少dialog数量      2.实现dialog的3D翻转

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
     <!--弹出对话框-->
     <style name="LocatonDialogStyle" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item><!-- 背景透明 -->
+        <item name="android:backgroundDimAmount">0.8</item>
         <!--<item name="android:windowAnimationStyle">@android:style/Theme.InputMethod</item>-->
         <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
     </style>
